--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-backend/node_modules
-frontend/node_modules
-tindev/node_modules
+./backend/node_modules
+./frontend/node_modules
+./tindev/node_modules
